# stacksample

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  tox.ini
.github/workflows/: testing.yaml
backend/: Dockerfile  pyproject.toml
backend/app/: main.py
backend/app/api/: api.py
backend/app/api/api_v1/endpoints/: tags.py
backend/app/core/: classifier.py  config.py
backend/app/models/: tags.py
backend/models/: vectorizer.pkl
stacksample/: __main__.py  loader.py  main.py  training.py
tests/: conftest.py  test_loader.py  test_main.py  test_training.py
